--- a/app/assets/stylesheets/home/home.scss
+++ b/app/assets/stylesheets/home/home.scss
@@ -45,12 +45,11 @@
 
 //フッター部
 footer{
-  height: 400px;
   .footer__content{
     &--logo{
       display: flex;
       justify-content: center;
-      margin: 20px 0;
+      margin: 50px 0 20px;
       img{
         width: 100px;
       }
