--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -50,5 +50,8 @@
       <% end %>
     </div>
   </div>
+  <div class="radius-button">
+    <%= link_to "里親を募集する", new_animal_path %>
+  </div>
 </main>
 <%= render 'shared/footer'%>
